before image field

--- a/events/templates/category.html
+++ b/events/templates/category.html
@@ -1,7 +1,7 @@
-{% extends "nav_bar.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block title %}Participants List{% endblock title %} 
-{% block eventlist %}
+{% block content %}
 
 <div>
     <h1 class="text-2xl font-bold text-center mb-6">Event Categories</h1>
@@ -34,4 +34,4 @@
 
 </div>
     
-{% endblock eventlist %}
+{% endblock content %}
