--- a/events/templates/participants.html
+++ b/events/templates/participants.html
@@ -1,7 +1,7 @@
-{% extends "nav_bar.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block title %}Participants List{% endblock title %} 
-{% block eventlist %}
+{% block content %}
 
 <div>
     <h1 class="text-2xl font-bold text-center "> Participants</h1>
@@ -26,5 +26,5 @@
 
 </div>
     
-{% endblock eventlist  %}
+{% endblock content  %}
     
