--- a/events/templates/event_details.html
+++ b/events/templates/event_details.html
@@ -19,11 +19,18 @@
     </div>
 
     <div class="relative h-96 w-full mb-8">
-        <img src="{% static event.image_file %}" 
+        <div class="relative h-96 w-full mb-8">
+    {% if event.image and event.image.url %}
+        <img src="{{ event.image.url }}" 
              alt="{{ event.name }}" 
              class="w-full h-full object-cover rounded-2xl shadow-2xl border-4 border-white">
+    {% else %}
+        <img src="{% static 'images/default.webp' %}" 
+             alt="Default Image" 
+             class="w-full h-full object-cover rounded-2xl shadow-2xl border-4 border-white">
+    {% endif %}
+</div>
     </div>
-
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="md:col-span-2 space-y-6">
             <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
