Class-based views implemented

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,25 +20,45 @@
                     <a href="{% url 'home' %}" class="text-white hover:text-gray-700 font-medium">Home</a>
                     <a href="{% url 'event-list' %}" class="text-white hover:text-gray-700 font-medium">Events</a>
                     {% if user.is_authenticated %}
-                  <span class="text-white font-bold mr-4">Welcome , {{user.first_name}}</span>
+                  
     
                    
 
             {% if user.is_superuser or user.is_staff %}
-                      <a href="{% url 'admin-dashboard' %}" class="text-white hover:text-gray-200 font-medium">Admin Panel</a>
-                      <a href="{% url 'logout' %}" class="text-white hover:text-gray-200 font-medium">Logout</a>
+                      <a href="{% url 'admin-dashboard' %}" class="text-white hover:text-gray-800 font-medium">Admin Panel</a>
+                      <form method="post" action="{% url 'logout' %}">
+                               {% csrf_token %}
+                          <button type="submit"
+                                  class="text-white hover:text-gray-800 font-medium">
+                          Logout
+                          </button>
+                      </form>
             {% endif %}
 
             {% if user.groups.all.0.name == 'Organizer' %}
                     <a href="{% url 'organizer-dashboard' %}" class="text-white hover:text-gray-200 font-medium">Dashboard</a>
                     <a href="{% url 'categories' %}" class="text-white hover:text-gray-200 font-medium">Categories</a>
-                    <a href="{% url 'logout' %}" class="text-white hover:text-gray-200 font-medium">Logout</a>
+                    <form method="post" action="{% url 'logout' %}">
+                      {% csrf_token %}
+                      <button type="submit"
+                              class="text-white hover:text-gray-800 font-medium">
+                        Logout
+                      </button>
+                    </form>
             {% endif %}
 
             {% if user.groups.all.0.name == 'User' %}
                    <a href="{% url 'participant-dashboard' %}" class="text-white hover:text-gray-200 font-medium">My RSVPs</a>
-                   <a href="{% url 'logout' %}" class="text-white hover:text-gray-200 font-medium">Logout</a>
+                   <form method="post" action="{% url 'logout' %}">
+                     {% csrf_token %}
+                     <button type="submit"
+                             class="text-white hover:text-gray-800 font-medium">
+                       Logout
+                     </button>
+                   </form>
             {% endif %}
+
+            <span class="text-white font-bold mr-4">Welcome , {{user.first_name}}</span>
 
             {% else %}
                 <a href="{% url 'sign-in' %}" class="text-white hover:text-gray-700 font-medium">Login</a>
