--- a/events/templates/event_form.html
+++ b/events/templates/event_form.html
@@ -22,7 +22,7 @@
            
         <form method="POST" enctype = 'multipart/form-data'>
           {% csrf_token %}
-          {{ event_form }}
+          {{ form }}
          <button type='submit' class='bg-red-500 px-5 py-2 text-white mt-3'>Submit</button>
         </form>
 
