--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -8,8 +8,7 @@
                 The all-in-one platform for organizers to create events and participants to RSVP with ease.
             </p>
             <div class="flex justify-center space-x-4">
-                <a href="#" class="bg-white text-indigo-900 px-8 py-3 rounded-full font-bold hover:bg-gray-100 transition">Browse Events</a>
-                <a href="#" class="border-2 border-white  px-8 py-3 rounded-full font-bold hover:bg-white hover:text-indigo-900 transition">Host an Event</a>
+                <a href="{% url 'event-list' %}" class="bg-white text-indigo-900 px-8 py-3 rounded-full font-bold hover:bg-gray-100 transition">Browse Events</a>
             </div>
         </div>
     </header>
