--- a/users/templates/accounts/update_profile.html
+++ b/users/templates/accounts/update_profile.html
@@ -7,15 +7,10 @@
                 <div class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %} ">{{message}}</div>
             {% endfor %}
         {% endif %}
-        <form method='POST'>
+        <form method='POST' enctype='multipart/form-data'>
             {% csrf_token %}
             {{ form }}
-            <button class='bg-orange-500 px-2 py-1 rounded mt-3  text-white' type="submit">Sign In</button>
+            <button class='bg-orange-500 px-2 py-1 rounded mt-3  text-white' type="submit">Update Profile</button>
         </form>
-        <p>
-          <a href="{% url 'password_reset' %}" class="hover:underline">
-             Forgot Password?
-          </a>
-        </p>
     </div>
 {% endblock content %}
