--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Sign-in{% endblock title %}
 {% block content %}
-<div class='mx-auto w-1/2 my-9'>
+    <div class='mx-auto w-1/2 my-9'>
         {% if messages %}
             {% for message in messages %}
                 <div class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %} ">{{message}}</div>
@@ -10,12 +9,7 @@
         <form method='POST'>
             {% csrf_token %}
             {{ form }}
-            <button class='bg-orange-500 px-2 py-1 rounded mt-3  text-white' type="submit">Sign In</button>
+            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-3' type="submit">Reset Password</button>
         </form>
-        <p>
-          <a href="{% url 'password_reset' %}" class="hover:underline">
-             Forgot Password?
-          </a>
-        </p>
     </div>
 {% endblock content %}
